# Trading-Bot-Project

./: README.md
feature_repo/: feature_store.yaml  features.py  load_data.py  requirements.txt  test_clickhouse.py
feature_repo/data/: candles.parquet  orderbook.parquet  sentiment.parquet
news_sentiment/: bayes_server.py  lgb_server.py  news_fetcher.py  redis_listener.py  sentiment_server.py  walk_forward.py
trading_bot_rust/: Cargo.toml
trading_bot_rust/src/: grpc_client.rs  lib.rs  metrics.rs  metrics_server.r  order_manager.rs  redis_client.rs  state_manager.rs  websocket_client.rs
trading_bot_rust/src/domain/: analyzer.rs  candle.rs  mod.rs  order_book.rs  price.rs
